--- a/bagofsnit/src/bagofsnit_frontend/src/index.scss
+++ b/bagofsnit/src/bagofsnit_frontend/src/index.scss
@@ -1,3 +1,5 @@
+@use "sass:color";
+
 // Variables
 $primary-color: #4A90D9;
 $secondary-color: #2c3e50;
@@ -142,7 +144,7 @@ body {
     color: white;
 
     &:hover:not(:disabled) {
-      background: darken($primary-color, 10%);
+      background: color.adjust($primary-color, $lightness: -10%);
     }
   }
 
@@ -151,7 +153,7 @@ body {
     color: white;
 
     &:hover:not(:disabled) {
-      background: darken($secondary-color, 10%);
+      background: color.adjust($secondary-color, $lightness: -10%);
     }
   }
 
@@ -160,7 +162,7 @@ body {
     color: white;
 
     &:hover:not(:disabled) {
-      background: darken($success-color, 10%);
+      background: color.adjust($success-color, $lightness: -10%);
     }
   }
 
@@ -169,7 +171,7 @@ body {
     color: white;
 
     &:hover:not(:disabled) {
-      background: darken($warning-color, 10%);
+      background: color.adjust($warning-color, $lightness: -10%);
     }
   }
 
@@ -178,7 +180,7 @@ body {
     color: white;
 
     &:hover:not(:disabled) {
-      background: darken($danger-color, 10%);
+      background: color.adjust($danger-color, $lightness: -10%);
     }
   }
 
@@ -240,14 +242,14 @@ input, textarea {
   margin-bottom: 1rem;
 
   &.alert-error {
-    background: lighten($danger-color, 35%);
+    background: color.adjust($danger-color, $lightness: 35%);
     color: $danger-color;
     border: 1px solid $danger-color;
   }
 
   &.alert-success {
-    background: lighten($success-color, 45%);
-    color: darken($success-color, 10%);
+    background: color.adjust($success-color, $lightness: 45%);
+    color: color.adjust($success-color, $lightness: -10%);
     border: 1px solid $success-color;
   }
 }
@@ -256,7 +258,7 @@ input, textarea {
 .principal {
   font-family: monospace;
   font-size: 0.875rem;
-  background: lighten($secondary-color, 65%);
+  background: color.adjust($secondary-color, $lightness: 65%);
   padding: 0.125rem 0.375rem;
   border-radius: 3px;
 
@@ -275,17 +277,17 @@ input, textarea {
   text-transform: uppercase;
 
   &.status-pending {
-    background: lighten($warning-color, 35%);
-    color: darken($warning-color, 15%);
+    background: color.adjust($warning-color, $lightness: 35%);
+    color: color.adjust($warning-color, $lightness: -15%);
   }
 
   &.status-active {
-    background: lighten($success-color, 45%);
-    color: darken($success-color, 10%);
+    background: color.adjust($success-color, $lightness: 45%);
+    color: color.adjust($success-color, $lightness: -10%);
   }
 
   &.status-suspended {
-    background: lighten($danger-color, 30%);
+    background: color.adjust($danger-color, $lightness: 30%);
     color: $danger-color;
   }
 
